tests/parser/define-type.11.bad.error
error: Invalid target for monomorphize attribute
  --> test:4:0
   |
 4 |  (monomorphize)
   |  ^^^^^^^^^^^^^^ monomorphize must be attached to a define or declare form
 5 |  (define-type T)
   |               - when parsing define-type
