tests/parser/define-type.11.bad.coalton
;; BAD: Define Type
(package test-package)

(monomorphize)
(define-type T)
